--- a/nbwmon.1
+++ b/nbwmon.1
@@ -33,19 +33,21 @@ Decrease redraw delay
 .Sh OPTIONS
 .Bl -tag -width Ds
 .It Fl h
-Show help.
+Show help
 .It Fl v
-Show version.
+Show version
 .It Fl C
-Disable colors.
+Disable colors
 .It Fl s
-Use SI units.
+Use SI units
+.It Fl b
+Use Bit/s
 .It Fl m
-Scale graph minimum.
+Scale graph minimum
 .It Fl g
-Show global maximum.
+Show global maximum
 .It Fl d Ar delay
-Set redraw delay in seconds.
+Set redraw delay in seconds
 .It Fl i Ar interface
-Select network interface.
+Select network interface
 .El
